<resources>
    <string name="app_name">VampireHelper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vampire Helper</string>
    <string name="nav_header_subtitle">For Game Masters</string>
    <string name="nav_header_desc">Menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_chronicles">Chronicles</string>

    <string name="title_dialog_create_chronicles">Chronicle Name</string>
    <string name="player_name">Player name</string>
    <string name="character_name">Character name</string>
    <string name="choose_clan">Choose clan</string>
    <string name="clan_image">Clan image</string>
    <string name="player_name_hint">Mauricio</string>
    <string name="character_name_hint">Cratos</string>
    <string name="base_initiative_hint">Base initiative</string>

    <string-array name="clan_list">
        <item>Brujah</item>
        <item>Gangrel</item>
        <item>Malkavian</item>
        <item>Nosferatu</item>
        <item>Toreador</item>
        <item>Tremere</item>
        <item>Ventrue</item>
        <item>Lasombra</item>
        <item>Tzimisce</item>
        <item>Assamita</item>
        <item>Giovanni</item>
        <item>Followers of Set</item>
        <item>Ravnos</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
